# ai-finder

./: .clabot  .gitignore  AUTHORS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  ai-finder.spec  pyproject.toml  scanoss-ai.spec
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-binaries.yml  ci.yml  cla-auto-sign.yml  promote-to-pypi.yml  release.yml
docs/: COMPETITIVE_ANALYSIS.md  CUSTOMER_JOURNEY.md  PITCH.md  ROADMAP.md  TELEMETRY.md
scripts/: create_seed_db.py  update_seed_checksums.py
